# print-web

./: .gitignore  README.md
backend/: .env.example  pyproject.toml
backend/app/: main.py  spa.py
backend/app/api/: admin.py  jobs.py  schemas.py
backend/app/core/: config.py  deps.py  security.py
backend/app/db/: engine.py  models.py
backend/app/printer/: calibration.py  driver.py  spool.py  worker.py
backend/app/services/: image.py  jobs.py  retention.py
frontend/: index.html  orval.config.ts  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/pages/: AdminPage.tsx  UserPage.tsx
frontend/src/pages/admin/: Dashboard.tsx  LoginScreen.tsx  RejectModal.tsx  Shell.tsx  cards.tsx  status.tsx
