[project]
name = "print-web-backend"
version = "0.1.0"
description = "Photo-print request/approval service for event venues"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlmodel>=0.0.22",
    "python-multipart>=0.0.9",
    "pydantic-settings>=2.5",
    "pillow>=10.4",
    "bcrypt>=4.2",
    "itsdangerous>=2.2",
    "pywin32>=306; sys_platform == 'win32'",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "pytest>=8.3",
    "httpx>=0.27",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM"]
ignore = ["E501"]
